--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,5 +1,5 @@
 doctype html
-html
+html(lang='en')
 	head
 		title= title
 		link(rel='apple-touch-icon' sizes='180x180' href='/icons/apple-touch-icon.png?v=7koxj44oew')
