Add alt to images

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,7 @@ block content
 	div(class='bgimg' id='home')
 		div(class='display-middle')
 			span(class='bgimg-span')
-				img(src='/assets/site-logo-transparent.png' width='100%')
+				img(alt='JULIANVOS.NL Logo' src='/assets/site-logo-transparent.png' width='100%')
 				br
 
 	div(class='about-section' id='about')
@@ -51,7 +51,7 @@ block content
 				span ★
 
 		p(class='proficiency')
-			img(src='/icons/csharp-icon.png' width='15')
+			img(alt='C# Icon' src='/icons/csharp-icon.png' width='15')
 			|  C# (.NET)
 		div(class="star-ratings-css")
 			div(class="star-ratings-css-top" style="width: 90%")
