--- a/views/index.pug
+++ b/views/index.pug
@@ -139,6 +139,6 @@ block content
 				| Top
 			div(class='linkedin')
 				a(href='https://shortener.julianvos.nl/?destination=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fjulian-vos-b09783150%2F&origin=website' class='linkedin-button')
-					i(class='fab fa-linkedin')
+					i(class='fab fa-linkedin')LinkedIn
 		
 		script(src='/scripts/script.js')
