Add meta description

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,6 +17,7 @@ html(lang='en')
 		meta(name='msapplication-TileImage' content='/icons/mstile-144x144.png?v=9BP4YaB3x3')
 		meta(name='msapplication-config' content='/icons/browserconfig.xml?v=9BP4YaB3x3')
 		meta(name='theme-color' content='#2b5797')
+		meta(name='Description' content='Personal website of Julian Vos')
 		link(rel='stylesheet' href='/styles/w3.css')
 		link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato')
 		link(rel='stylesheet' href='/styles/all.min.css')
