Add meta viewport

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -18,6 +18,7 @@ html(lang='en')
 		meta(name='msapplication-config' content='/icons/browserconfig.xml?v=9BP4YaB3x3')
 		meta(name='theme-color' content='#2b5797')
 		meta(name='Description' content='Personal website of Julian Vos')
+		meta(name='viewport' content='width=device-width, initial-scale=1')
 		link(rel='stylesheet' href='/styles/w3.css')
 		link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato')
 		link(rel='stylesheet' href='/styles/all.min.css')
