--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -197,6 +197,7 @@ html {
     margin-bottom: 16px !important;
     text-align: center !important;
     font-size: 18px !important;
+    color: #FFFFFF;
 }
 
 .details {
