Converted images to webp format

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,7 @@ block content
 	div(class='bgimg' id='home')
 		div(class='display-middle')
 			span(class='bgimg-span')
-				img(alt='JULIANVOS.NL Logo' src='/assets/site-logo-transparent.png' width='100%')
+				img(alt='JULIANVOS.NL Logo' src='/assets/site-logo-transparent.webp' width='100%')
 				br
 
 	div(class='about-section' id='about')
@@ -51,7 +51,7 @@ block content
 				span ★
 
 		p(class='proficiency')
-			img(alt='C# Icon' src='/icons/csharp-icon.png' width='15')
+			img(alt='C# Icon' src='/icons/csharp-icon.webp' width='15')
 			|  C# (.NET)
 		div(class="star-ratings-css")
 			div(class="star-ratings-css-top" style="width: 90%")
@@ -98,17 +98,17 @@ block content
 		div(class='work-row')
 			div(class='work-col')
 				a(href='/personal_projects/snake/')
-					img(src='/assets/snake.png' class='work-img' alt="Snake in P5.js")
+					img(src='/assets/snake.webp' class='work-img' alt="Snake in P5.js")
 					| Snake in P5.js
 
 			div(class='work-col')
 				a(href='/personal_projects/pong/')
-					img(src='/assets/pong.png' class='work-img' alt="Pong in P5.js")
+					img(src='/assets/pong.webp' class='work-img' alt="Pong in P5.js")
 					| Pong in P5.js
 
 			div(class='work-col')
 				a(href='/personal_projects/lyrics_graph/')
-					img(src='/assets/lyrics.png' class='work-img' alt="Lyrics repetition chart")
+					img(src='/assets/lyrics.webp' class='work-img' alt="Lyrics repetition chart")
 					| Lyrics repetition chart
 			
 		div(class='work-row')
