--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,20 +2,20 @@ doctype html
 html(lang='en')
 	head
 		title= title
-		link(rel='apple-touch-icon' sizes='180x180' href='/icons/apple-touch-icon.webp?v=7koxj44oew')
-		link(rel='apple-touch-icon' sizes='180x180' href='/icons/apple-touch-icon.webp?v=9BP4YaB3x3')
-		link(rel='icon' type='image/png' sizes='32x32' href='/icons/favicon-32x32.webp?v=9BP4YaB3x3')
-		link(rel='icon' type='image/png' sizes='194x194' href='/icons/favicon-194x194.webp?v=9BP4YaB3x3')
-		link(rel='icon' type='image/png' sizes='192x192' href='/icons/android-chrome-192x192.webp?v=9BP4YaB3x3')
-		link(rel='icon' type='image/png' sizes='16x16' href='/icons/favicon-16x16.webp?v=9BP4YaB3x3')
-		link(rel='manifest' href='/icons/site.webmanifest?v=9BP4YaB3x3')
-		link(rel='mask-icon' href='/icons/safari-pinned-tab.svg?v=9BP4YaB3x3' color='#e58c45')
-		link(rel='shortcut icon' href='/icons/favicon.ico?v=9BP4YaB3x3')
+		link(rel='apple-touch-icon' sizes='180x180' href='/icons/apple-touch-icon.webp')
+		link(rel='apple-touch-icon' sizes='180x180' href='/icons/apple-touch-icon.webp')
+		link(rel='icon' type='image/png' sizes='32x32' href='/icons/favicon-32x32.webp')
+		link(rel='icon' type='image/png' sizes='194x194' href='/icons/favicon-194x194')
+		link(rel='icon' type='image/png' sizes='192x192' href='/icons/android-chrome-192x192.webp')
+		link(rel='icon' type='image/png' sizes='16x16' href='/icons/favicon-16x16.webp')
+		link(rel='manifest' href='/icons/site.webmanifest')
+		link(rel='mask-icon' href='/icons/safari-pinned-tab.svg' color='#e58c45')
+		link(rel='shortcut icon' href='/icons/favicon.ico')
 		meta(name='apple-mobile-web-app-title' content='Julian Vos')
 		meta(name='application-name' content='Julian Vos')
 		meta(name='msapplication-TileColor' content='#2b5797')
-		meta(name='msapplication-TileImage' content='/icons/mstile-144x144.webp?v=9BP4YaB3x3')
-		meta(name='msapplication-config' content='/icons/browserconfig.xml?v=9BP4YaB3x3')
+		meta(name='msapplication-TileImage' content='/icons/mstile-144x144.webp')
+		meta(name='msapplication-config' content='/icons/browserconfig.xml')
 		meta(name='theme-color' content='#2b5797')
 		meta(name='Description' content='Personal website of Julian Vos')
 		meta(name='viewport' content='width=device-width, initial-scale=1')
