--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -40,7 +40,7 @@ html {
 
 .bgimg {
     position: relative;
-    background-image: url('/assets/bgimage1.jpg');
+    background-image: url('/assets/bgimage1.webp');
     min-height: 100%;
     background-attachment: fixed;
     background-position: center;
