--- a/views/layout.pug
+++ b/views/layout.pug
@@ -20,7 +20,7 @@ html(lang='en')
 		meta(name='Description' content='Personal website of Julian Vos')
 		meta(name='viewport' content='width=device-width, initial-scale=1')
 		link(rel='stylesheet' href='/styles/w3.css')
-		link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato')
+		link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato&display=swap')
 		link(rel='stylesheet' href='/styles/all.min.css')
 		link(rel='stylesheet' href='/styles/style.css')
 
