Add compression and minify

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -30,6 +30,7 @@ html(lang='en')
 				a.w3-bar-item.w3-button.w3-hover-black.w3-hide-medium.w3-hide-large.w3-right(href='javascript:void(0);' onclick='toggle()' title='Toggle Navigation Menu')
 					i.fas.fa-bars
 				a.w3-bar-item.w3-button(href='/#home') HOME
+					i.fas.fa-home
 				a.w3-bar-item.w3-button.w3-hide-small(href='/#about')
 					i.fas.fa-user
 					|  ABOUT
