--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -27,6 +27,11 @@ h6 {
     background-color: rgb(42, 44, 46);
 }
 
+::selection {
+    background-color: rgb(0, 92, 204);
+    color: rgb(255, 255, 255);
+}
+
 body,
 html {
     height: 100%;
