Fix home button text placement

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -29,8 +29,9 @@ html(lang='en')
 			#navbar.w3-bar
 				a.w3-bar-item.w3-button.w3-hover-black.w3-hide-medium.w3-hide-large.w3-right(href='javascript:void(0);' onclick='toggle()' title='Toggle Navigation Menu')
 					i.fas.fa-bars
-				a.w3-bar-item.w3-button(href='/#home') HOME
+				a.w3-bar-item.w3-button(href='/#home')
 					i.fas.fa-home
+					|  HOME
 				a.w3-bar-item.w3-button.w3-hide-small(href='/#about')
 					i.fas.fa-user
 					|  ABOUT
