--- a/views/layout.pug
+++ b/views/layout.pug
@@ -23,6 +23,7 @@ html(lang='en')
 		link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato&display=swap')
 		link(rel='stylesheet' href='/styles/all.min.css')
 		link(rel='stylesheet' href='/styles/style.css')
+		script(data-ad-client="ca-pub-8345241265475162" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js")
 
 	body
 		.w3-top
