Add urls to privacy policy and terms of service

--- a/views/index.pug
+++ b/views/index.pug
@@ -141,5 +141,9 @@ block content
 				a(href='https://shortener.julianvos.nl/?destination=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fjulian-vos-b09783150%2F&origin=website' class='linkedin-button')
 					i(class='fab fa-linkedin')
 					| LinkedIn
+			a(href='https://julianvos.nl/privacy_policy')
+				| Privacy Policy
+			a(href='https://julianvos.nl/terms_of_service')
+				| Terms of Service
 		
 		script(src='/scripts/script.js')
