Changed url's to point to new api

--- a/views/index.pug
+++ b/views/index.pug
@@ -14,9 +14,9 @@ block content
 		p(class='about-p')
 			em Programmer, musician, gamer
 		p
-			| I picked up a love for programming in 2013, from watching <a href="https://shortener.julianvos.nl/?destination=https%3A%2F%2Fwww.youtube.com%2Fuser%2Fshiffman&origin=website">The
+			| I picked up a love for programming in 2013, from watching <a href="https://api.julianvos.nl/redirect?destination=https%3A%2F%2Fwww.youtube.com%2Fuser%2Fshiffman&origin=website">The
 			| Coding Train</a>.
-			| I learned the basics of <a href="https://shortener.julianvos.nl/?destination=https%3A%2F%2Fwww.processing.org&origin=website">Processing</a>, and started following an official
+			| I learned the basics of <a href="https://api.julianvos.nl/redirect?destination=https%3A%2F%2Fwww.processing.org&origin=website">Processing</a>, and started following an official
 			| programming education in 2017.
 		p
 			| From October 2018 until March 2019, I was participating in an international internship in the UK, where I have been
@@ -28,7 +28,7 @@ block content
 			| I try to practice at least once a day, and am always looking for the next riff to master.
 		p
 			| For as long as I can remember, video games have been a part of my life. My all-time favourite game is The Legend
-			| of Zelda: Ocarina of Time, closely followed by <a href="https://shortener.julianvos.nl/?destination=https%3A%2F%2Fwww.clonehero.net&origin=website">Clone Hero</a> and Breath of
+			| of Zelda: Ocarina of Time, closely followed by <a href="https://api.julianvos.nl/redirect?destination=https%3A%2F%2Fwww.clonehero.net&origin=website">Clone Hero</a> and Breath of
 			| the Wild.
 
 		p(class='proficient-header') I'm proficient in:
@@ -138,7 +138,7 @@ block content
 				i(class='fas fa-arrow-up home-icon')
 				| Top
 			div(class='linkedin')
-				a(href='https://shortener.julianvos.nl/?destination=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fjulian-vos-b09783150%2F&origin=website' class='linkedin-button')
+				a(href='https://api.julianvos.nl/redirect?destination=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fjulian-vos-b09783150%2F&origin=website' class='linkedin-button')
 					i(class='fab fa-linkedin')
 					| LinkedIn
 			a(href='https://julianvos.nl/privacy_policy')
