Change urls to new api

--- a/views/index.pug
+++ b/views/index.pug
@@ -28,7 +28,7 @@ block content
 			| I try to practice at least once a day, and am always looking for the next riff to master.
 		p
 			| For as long as I can remember, video games have been a part of my life. My all-time favourite game is The Legend
-			| of Zelda: Ocarina of Time, closely followed by <a href="https://shortener.julianvos.nl/?destination=https%3A%2F%2Fclonehero.net&origin=website">Clone Hero</a> and Breath of
+			| of Zelda: Ocarina of Time, closely followed by <a href="https://api.julianvos.nl/redirect?destination=https%3A%2F%2Fclonehero.net&origin=website">Clone Hero</a> and Breath of
 			| the Wild.
 
 		p(class='proficient-header') I'm proficient in:
