Add dates to api urls

--- a/views/index.pug
+++ b/views/index.pug
@@ -15,10 +15,11 @@ block content
 		p(class='about-p')
 			em Programmer, musician, gamer
 		p
-			| I picked up a love for programming in 2013, from watching <a href='https://api.julianvos.nl/redirect?destination=https%3A%2F%2Fwww.youtube.com%2Fuser%2Fshiffman&origin=website&date=' + date>The
-			| Coding Train</a>.
-			| I learned the basics of <a href='https://api.julianvos.nl/redirect?destination=https%3A%2F%2Fwww.processing.org&origin=website&date=' + date>Processing</a>, and started following an official
-			| programming education in 2017.
+			| I picked up a love for programming in 2013, from watching 
+			a(href='https://api.julianvos.nl/redirect?destination=https%3A%2F%2Fwww.youtube.com%2Fuser%2Fshiffman&origin=website&date=' + date) The Coding Train
+			| . I learned the basics of 
+			a(href='https://api.julianvos.nl/redirect?destination=https%3A%2F%2Fwww.processing.org&origin=website&date=' + date) Processing
+			| , and started following an official programming education in 2017.
 		p
 			| From October 2018 until March 2019, I was participating in an international internship in the UK, where I have been
 			| working with Node.js on the back-end. One of the most difficult and useful skills I've had to learn was using
@@ -29,8 +30,9 @@ block content
 			| I try to practice at least once a day, and am always looking for the next riff to master.
 		p
 			| For as long as I can remember, video games have been a part of my life. My all-time favourite game is The Legend
-			| of Zelda: Ocarina of Time, closely followed by <a href='https://api.julianvos.nl/redirect?destination=https%3A%2F%2Fclonehero.net&origin=website&date=' + date>Clone Hero</a> and Breath of
-			| the Wild.
+			| of Zelda: Ocarina of Time, closely followed by 
+			a(href='https://api.julianvos.nl/redirect?destination=https%3A%2F%2Fclonehero.net&origin=website&date=' + date) Clone Hero
+			|  and Breath of the Wild.
 
 		p(class='proficient-header') I'm proficient in:
 
