Converting all projects to use pug renderer

--- a/views/index.pug
+++ b/views/index.pug
@@ -100,17 +100,17 @@ block content
 
 		div(class='work-row')
 			div(class='work-col')
-				a(href='/personal_projects/snake/')
+				a(href='/projects/snake/')
 					img(src='/assets/snake.webp' class='work-img' alt="Snake in P5.js")
 					| Snake in P5.js
 
 			div(class='work-col')
-				a(href='/personal_projects/pong/')
+				a(href='/projects/pong/')
 					img(src='/assets/pong.webp' class='work-img' alt="Pong in P5.js")
 					| Pong in P5.js
 
 			div(class='work-col')
-				a(href='/personal_projects/lyrics_graph/')
+				a(href='/projects/lyrics_graph/')
 					img(src='/assets/lyrics.webp' class='work-img' alt="Lyrics repetition chart")
 					| Lyrics repetition chart
 			
@@ -135,19 +135,3 @@ block content
 				i(class='fas fa-envelope fa-fw details')
 				| post[at]julianvos.nl
 				br
-
-		footer(class='footer')
-			a(href='#home' class='home-button')
-				i(class='fas fa-arrow-up home-icon')
-				| Top
-			div(class='linkedin')
-				a(href='https://api.julianvos.nl/redirect?destination=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fjulian-vos-b09783150%2F&origin=website&date=' + date class='linkedin-button')
-					i(class='fab fa-linkedin')
-					| LinkedIn
-			a(href='https://julianvos.nl/privacy_policy')
-				| Privacy Policy
-			br
-			a(href='https://julianvos.nl/terms_of_service')
-				| Terms of Service
-		
-		script(src='/scripts/script.js')
