--- a/views/projects.pug
+++ b/views/projects.pug
@@ -1,22 +1,20 @@
 extends layout
-
 block content
+	br
 	h1 Personal Projects
 	ul
 		li
-			a(href='/personal_projects/cookie_clicker') Cookie clicker
+			a(href='/projects/snake/') Snake
 		li
-			a(href='/personal_projects/snake/') Snake
+			a(href='/projects/match4/') Match 4
 		li
-			a(href='/personal_projects/match4/') Match 4
+			a(href='/projects/pong/') Pong
 		li
-			a(href='/personal_projects/pong/') Pong
+			a(href='/projects/dungeon_drawler/') Dungeon Crawler
 		li
-			a(href='/personal_projects/dungeon_drawler/') Dungeon Crawler
+			a(href='/projects/dungeon_crawler_editor/') Dungeon Crawler Level Editor
 		li
-			a(href='/personal_projects/dungeon_crawler_editor/') Dungeon Crawler Level Editor
-		li
-			a(href='/personal_projects/lyrics_graph/') Lyrics graph thing
+			a(href='/projects/lyrics_graph/') Lyrics graph thing
 	h1 Exercises
 	ul
 		li
