--- a/views/projects/snake/index.pug
+++ b/views/projects/snake/index.pug
@@ -47,19 +47,18 @@ html(lang='en')
 				a.w3-bar-item.w3-button(href='#about' onclick='toggleFunction()') ABOUT
 				a.w3-bar-item.w3-button(href='#portfolio' onclick='toggleFunction()') PORTFOLIO
 				a.w3-bar-item.w3-button(href='#contact' onclick='toggleFunction()') CONTACT
-		block content
-		block footer
-		footer(class='footer')
-			a(href='#home' class='home-button')
-				i(class='fas fa-arrow-up home-icon')
-				| Top
-			div(class='linkedin')
-				a(href='https://api.julianvos.nl/redirect?destination=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fjulian-vos-b09783150%2F&origin=website&date=' + date class='linkedin-button')
-					i(class='fab fa-linkedin')
-					| LinkedIn
-			a(href='https://julianvos.nl/privacy_policy')
-				| Privacy Policy
-			br
-			a(href='https://julianvos.nl/terms_of_service')
-				| Terms of Service
-		script(src='/scripts/script.js')
+	br
+	br
+
+	script(src='/libraries/p5.min.js')
+	script(src='/scripts/snake/sketch.js')
+	style.
+		body {
+			margin: 0;
+			margin-left: 45px;
+			padding: 0;
+			overflow: hidden;
+		}
+		canvas {
+			margin: auto;
+		}
