--- a/views/projects/dungeon_crawler/index.pug
+++ b/views/projects/dungeon_crawler/index.pug
@@ -25,8 +25,7 @@ html(lang='en')
 		link(rel='stylesheet' href='/styles/style.css')
 		script(data-ad-client="ca-pub-8345241265475162" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js")
 		script(src='/libraries/p5.min.js')
-		script(src='/libraries/p5.sound.min.js')
-		script(src='/scripts/match4/sketch.js')
+		script(src='/scripts/dungeon_crawler/sketch.js')
 		style.
 			body {
 				margin: 0;
@@ -37,7 +36,6 @@ html(lang='en')
 			canvas {
 				margin: auto;
 			}
-
 
 	body
 		.w3-top
